[package]
name = "git-retime"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Rewrite git commit time in history"
repository = "https://github.com/oovm/git-time-travel"
documentation = "https://docs.rs/git-retime"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
git2 = "0.17.1"
chrono = "0.4.24"
rand = { version = "0.8.5", features = [] }

[dependencies.git-utils]
path = "../git-utils"

[dev-dependencies]

[features]
default = []
